--- a/inst/rmarkdown/templates/quotes/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/quotes/skeleton/skeleton.Rmd
@@ -21,11 +21,12 @@ params:
       e_mail: "contact@benjaminlouis-stat.fr"
       web: "www.benjaminlouis-stat.fr"
       siret: "831 872 916 00026"
-  logo: 
+  logos: 
     value:
-      yes: TRUE
-      file: "logo_name.png"
-      width: 35mm
+      company: TRUE
+      company_file: "logo_name.png"
+      backgound: TRUE
+      background_file: "logo.png"
   client:
     value:
       firstname: "firstname"
@@ -41,9 +42,13 @@ params:
   comment: "Some comments"
   services:
     value:
-      data: NA
-      totdata: NA
-      tva: "no"
+      description: !r list('service1', 'service2')
+      quantity: !r list(2, 1.5)
+      unit: NA
+      unitprice: !r list(100, 50)
+  tva: "No"
+  discount: 0
+  deposit: 0
   bankinfo:
     value:
       holder: "HOLDER"
@@ -57,6 +62,7 @@ params:
 ---
 
 ```{r setup, include=FALSE}
+options(knitr.kable.NA = '')
 knitr::opts_chunk$set(echo = FALSE,
                       warning = FALSE,
                       message = FALSE,
@@ -73,8 +79,18 @@ library(bentemplates)
 `r paste0("Devis n° ", params$info$ndoc)`
 :::
 
-<div class = "wrapper">
+---
+# I can't find a way to move what's following in the CSS file
+---
+<style>
+:root {
+  --main-bg-image: `r if (params$logos$backgound) paste0("url('", params$logos$background_file,"')")`;
+}
+</style>
 
+
+
+<div class = "wrapper">
 ---
 #######################################
 ############# HEADER ##################
@@ -88,7 +104,7 @@ library(bentemplates)
 ---
 <div class = "freelance">
 <div class = "logo">
-![](`r params$logo$file`)
+![](`r if (params$logos$company) params$logos$company_file`)
 
 `r process_freelance(params$freelance)`
 </div>
@@ -127,6 +143,21 @@ library(bentemplates)
 
 <div class = "doc-main">
 
+<div class = "description">
+`r process_services(services = params$services, tva = params$tva)`
+```{r}
+services = params$services
+```
+</div>
+
+<div class = "total">
+`r process_total(services = params$services, tva = params$tva, deposit = params$deposit, discount = params$discount)`
+</div>
+
+<div class = "comments">
+`r params$comment`
+</div>
+
 </div>
 
 
@@ -139,7 +170,7 @@ library(bentemplates)
 <div class = "doc-footer">
 
 <div class = "footquote">
-Afin de valider ce devis, merci de le signer et le renvoyer à `r params$config$e_mail` :
+Afin de valider ce devis, merci de le signer et le renvoyer à `r params$freelance$e_mail` :
 
 <div class = "footbox">
 Bon pour accord le :
