Better address display and direct pdf printing

--- a/inst/rmarkdown/templates/invoices/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/invoices/skeleton/skeleton.Rmd
@@ -3,6 +3,7 @@ output:
   pagedown::html_letter:
     self_contained: false
     css: ["default","default-fonts","custom_invoices.css"]
+knit: pagedown::chrome_print
 params:
   info:
     value:
