--- a/inst/rmarkdown/templates/quotes/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/quotes/skeleton/skeleton.Rmd
@@ -3,6 +3,7 @@ output:
   pagedown::html_letter:
     self_contained: false
     css: ["default","default-fonts","custom_quotes.css"]
+knit: pagedown::chrome_print
 params:
   info:
     value:
@@ -20,7 +21,7 @@ params:
       mobile: "+33(0)6 47 94 72 38"
       e_mail: "contact@benjaminlouis-stat.fr"
       web: "www.benjaminlouis-stat.fr"
-      siret: "831 872 916 00026"
+      siret: "831 872 916 00034"
   logos: 
     value:
       company: TRUE
